# translator_tp

./: README.md
tool/: CMakeLists.txt  TranslationData.h  bfnpreviewwidget.cpp  bfnpreviewwidget.h  bmghandler.cpp  bmghandler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rarchandler.cpp  rarchandler.h  res.qrc  translationmodel.cpp  translationmodel.h  yaz0.cpp  yaz0.h
